Put custom functions in a local table to prevent possible conflicts with other scripts

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	"categories": ["Scripts"],
 	"contributes": {
 		"scripts": [
-			{"path": "./reference_viewer.lua"}
+			{"path": "./reference_viewer_extension.lua"}
 		]
 	}
 }
